--- a/configExample/configMnist.json
+++ b/configExample/configMnist.json
@@ -30,5 +30,14 @@
 	"net1"  :{"input":["input"], "output":["net2"]},
 	"net2"  :{"input":["net1"], "output":["net3"]},
 	"output":{"input":["net2"]}
+    },
+    "optim":
+    {
+	"name": "Vanilla",
+	"params":
+	{
+	    "lr":0.1,
+	    "weight_decay":1e-4
+	}
     }
 }
