--- a/configExample/configCarMedium.json
+++ b/configExample/configCarMedium.json
@@ -5,7 +5,7 @@
 	{
 	    "init": "random",
 	    "type": "conv",
-	    "params":{"in_channels":12, "out_channels": 20, "kernel_size": [7,7], "stride": 1},
+	    "params":{"in_channels":12, "out_channels": 30, "kernel_size": [7,7], "stride": 2},
 	    "actFun":"rlu",
 	    "requires_grad": true
 	},
@@ -18,6 +18,19 @@
 	{
 	    "init": "random",
 	    "type": "conv",
+	    "params":{"in_channels":30, "out_channels": 20, "kernel_size": [5,5], "stride": 1},
+	    "actFun":"rlu",
+	    "requires_grad": true
+	},
+	"net4":
+	{
+	    "type": "max_pool",
+	    "params":{"kernel_size":2}
+	},
+	"net5":
+	{
+	    "init": "random",
+	    "type": "conv",
 	    "params":{"in_channels":20, "out_channels": 10, "kernel_size": [5,5], "stride": 1},
 	    "actFun":"rlu",
 	    "requires_grad": true
@@ -26,16 +39,18 @@
 	{
 	    "init": "random",
 	    "type": "fc",
-	    "params":{"in_features":2720, "out_features": 25},
+	    "params":{"in_features":70, "out_features": 25},
 	    "requires_grad": true
 	}
     },
     "strctNet":
     {
 	"net1"   :{"input":["input"], "output":["net2"]},
-	"net2"   :{"input":["net1"], "output":["net3"]},
-	"net3"   :{"input":["net2"], "output":["output0"]}
-	"output0":{"input":["net3"]}
+	"net2"   :{"input":["net1"],  "output":["net3"]},
+	"net3"   :{"input":["net2"],  "output":["net4"]},
+	"net4"   :{"input":["net3"],  "output":["net5"]},
+	"net5"   :{"input":["net4"],  "output":["output0"]},
+	"output0":{"input":["net5"]}
     },
     "optim":
     {
