--- a/configExample/configCarMedium.json
+++ b/configExample/configCarMedium.json
@@ -5,7 +5,7 @@
 	{
 	    "init": "random",
 	    "type": "conv",
-	    "params":{"in_channels":12, "out_channels": 30, "kernel_size": [7,7], "stride": 2},
+	    "params":{"in_channels":12, "out_channels": 40, "kernel_size": [7,7], "stride": 2},
 	    "actFun":"rlu",
 	    "requires_grad": true
 	},
@@ -18,7 +18,7 @@
 	{
 	    "init": "random",
 	    "type": "conv",
-	    "params":{"in_channels":30, "out_channels": 20, "kernel_size": [5,5], "stride": 1},
+	    "params":{"in_channels":40, "out_channels": 30, "kernel_size": [5,5], "stride": 1},
 	    "actFun":"rlu",
 	    "requires_grad": true
 	},
@@ -28,6 +28,14 @@
 	    "params":{"kernel_size":2}
 	},
 	"net5":
+	{
+	    "init": "random",
+	    "type": "conv",
+	    "params":{"in_channels":30, "out_channels": 20, "kernel_size": [5,5], "stride": 1},
+	    "actFun":"rlu",
+	    "requires_grad": true
+	},
+	"net6":
 	{
 	    "init": "random",
 	    "type": "conv",
@@ -46,19 +54,26 @@
     "strctNet":
     {
 	"net1"   :{"input":["input"], "output":["net2"]},
-	"net2"   :{"input":["net1"],  "output":["net3"]},
-	"net3"   :{"input":["net2"],  "output":["net4"]},
-	"net4"   :{"input":["net3"],  "output":["net5"]},
-	"net5"   :{"input":["net4"],  "output":["output0"]},
-	"output0":{"input":["net5"]}
+	"net2"   :{"input":["net1"], "output":["net3"]},
+	"net3"   :{"input":["net2"], "output":["net4"]},
+	"net4"   :{"input":["net3"], "output":["net5"]},
+	"net5"   :{"input":["net4"], "output":["net6"]},
+	"net6"   :{"input":["net5"], "output":["output0"]},
+	"output0":{"input":["net6"]}
     },
     "optim":
     {
-	"name": "Vanilla",
+	"name": "SGD",
 	"params":
 	{
 	    "lr":0.001,
-	    "weight_decay":1e-4
+	    "momentum":0.9,
+	    "weight_decay":1e-5
 	}
+    },
+    "lr_scheduler":
+    {
+	"step_size":7,
+	"gamma":0.1
     }
 }
